--- a/templates/dashboard_parent.html
+++ b/templates/dashboard_parent.html
@@ -95,6 +95,7 @@
     </div>
 
     <div class="hr"></div>
+    <a class="btn btn-secondary" href="{{ request.url_for('parent_redeems_page', pid=pid) }}">ตรวจคำขอแลกรางวัล</a>
 
     {# ---------- Create Reward ---------- #}
     <div class="section">
