--- a/templates/dashboard_kid.html
+++ b/templates/dashboard_kid.html
@@ -152,9 +152,11 @@
 </div>
 
   {% endif %}
-
+  
   <div style="margin-top:18px;text-align:center;">
-    <a class="btn" href="/login">ออกจากระบบ</a>
+    <a class="btn btn-outline-primary mb-2" href="{{ request.url_for('kid_history_page', kid_id=kid.id) }}">ประวัติของฉัน</a>
+    <hr>
+    <a class="btn mt-2" href="/login">ออกจากระบบ</a>
   </div>
 </div>
 
