--- a/templates/kid_history.html
+++ b/templates/kid_history.html
@@ -25,7 +25,7 @@
             <tr>
               <td>{{ t.title }}</td>
               <td class="text-center">{{ t.points }}</td>
-              <td>{{ t.completed_at }}</td>
+              <td>{{ t.completed_at|th_datetime }}</td>
             </tr>
           {% endfor %}
         </tbody>
@@ -51,7 +51,7 @@
             <tr>
               <td>{{ r.name }}</td>
               <td class="text-center">{{ r.cost }}</td>
-              <td>{{ r.approved_at }}</td>
+              <td>{{ r.approved_at|th_datetime }}</td>
             </tr>
           {% endfor %}
         </tbody>
